--- a/package.json
+++ b/package.json
@@ -1,30 +1,37 @@
 {
-  "name": "node-ts-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.12",
-    "@types/http-errors": "^1.8.0",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^15.12.2",
-    "@types/swagger-jsdoc": "^6.0.0",
-    "@types/swagger-ui-express": "^4.1.2",
-    "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6",
-    "typescript": "^4.3.2"
-  },
-  "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "http-errors": "^1.8.0",
-    "morgan": "^1.10.0"
-  }
+    "name": "node-ts-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node dist/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.10",
+        "@types/express": "^4.17.12",
+        "@types/express-session": "^1.17.3",
+        "@types/http-errors": "^1.8.0",
+        "@types/morgan": "^1.9.2",
+        "@types/node": "^15.12.2",
+        "@types/swagger-jsdoc": "^6.0.0",
+        "@types/swagger-ui-express": "^4.1.2",
+        "express-session": "^1.17.2",
+        "swagger-jsdoc": "^6.1.0",
+        "swagger-ui-express": "^4.1.6",
+        "typescript": "^4.3.2"
+    },
+    "dependencies": {
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "helmet": "^4.6.0",
+        "http-errors": "^1.8.0",
+        "morgan": "^1.10.0",
+        "openapi-types": "^9.1.0"
+    }
 }
