--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.10",
+        "@types/csurf": "^1.11.2",
         "@types/express": "^4.17.12",
         "@types/express-session": "^1.17.3",
         "@types/http-errors": "^1.8.0",
@@ -28,6 +29,7 @@
     "dependencies": {
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
+        "csurf": "^1.11.0",
         "express": "^4.17.1",
         "helmet": "^4.6.0",
         "http-errors": "^1.8.0",
